# coworking_booking

./: .dockerignore  .gitignore  .pylintrc  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/api/: auth.py  bookings.py  rooms.py
app/core/: config.py  dependencies.py  security.py  seed.py
app/db/: base.py  models.py  session.py
app/schemas/: booking.py  room.py  user.py
app/services/: auth.py  booking.py  room.py
tests/: __init__.py  conftest.py  test_auth.py  test_bookings.py  test_health.py  test_jwt.py  test_rooms.py  test_unit.py
